# Fall-2018

./: README.md  mac-hints.txt
assignments/week1/lab1/: README.md  mac-hints.md  survey.md
assignments/week1/lab1/src/: Greeting.hs
assignments/week1/lab1/tests/: Main.hs
assignments/week10/hw/: README.md  hw.cabal
assignments/week10/hw/src/: EnvUnsafe.hs  Lang.hs  LangParser.hs  ParserMonad.hs
assignments/week10/hw/tests/: EvalUnsafeTest.hs  LangParserTest.hs  LangTest.hs  Main.hs
assignments/week2/hw/: README.md  hw.cabal
assignments/week2/hw/src/: Hw.hs
assignments/week2/hw/tests/: Main.hs
assignments/week2/lab2/: README.md  lab2.cabal
assignments/week2/lab2/src/: Data.hs
assignments/week2/lab2/tests/: Main.hs
assignments/week3/hw/: README.md  hw.cabal
assignments/week3/hw/src/: BinarySearchTrees.hs  DataProblems.hs  HigherOrderProblems.hs  Outside.hs  Set.hs  TypeProblems.hs  WarmUp.hs
assignments/week3/hw/tests/: BinarySearchTreesTest.hs  DataProblemsTest.hs  HigherOrderProblemsTest.hs  Main.hs  OutsideTest.hs  SetTest.hs  TypeProblemsTest.hs  WarmUpTest.hs
assignments/week4/hw/: README.md  hw.cabal
assignments/week4/hw/src/: AnnoyingLists.hs  HigherOrderProblems.hs  IndexAndConcordance.hs  IndexTree.hs  IndexTreeBad.hs  TypeclassProblems.hs  WarmUp.hs
assignments/week4/hw/tests/: HigherOrderProblemsTest.hs  IndexAndConcordanceTest.hs  IndexTreeBadTest.hs  IndexTreeTest.hs  Main.hs  MiniGoogle.hs  TypeclassProblemsTest.hs  WarmUpTest.hs
assignments/week5/hw/: README.md  hw.cabal
assignments/week5/hw/src/: HigherOrderProblems.hs  Lang0.hs  Lang1.hs  Lang2.hs  Lang3.hs  Lang4.hs  TypeclassProblems.hs  WarmUp.hs
assignments/week5/hw/tests/: HigherOrderProblemsTest.hs  Lang0Test.hs  Lang1Test.hs  Lang2Test.hs  Lang3Test.hs  Lang4Test.hs  Main.hs  TypeclassProblemsTest.hs  WarmUpTest.hs
assignments/week6/hw/: README.md  hw.cabal
assignments/week6/hw/src/: InfiniteLists.hs  LambdaCalcImplementation.hs  UsingLambdaCalc.hs
assignments/week6/hw/tests/: InfiniteListsTest.hs  LambdaCalcImplementationTest.hs  Main.hs  UsingLambdaCalcTest.hs
assignments/week7/hw/: README.md  hw.cabal
assignments/week7/hw/src/: Lang0Parser.hs  Lang1Parser.hs  Lang2Parser.hs  Lang3Parser.hs  Lang4Parser.hs  MonadProblems.hs  MyParserLib.hs
assignments/week7/hw/src/week5/: Lang0.hs  Lang1.hs  Lang2.hs  Lang3.hs  Lang4.hs
assignments/week7/hw/tests/: Lang0Test.hs  Lang1Test.hs  Lang2Test.hs  Lang3Test.hs  Lang4Test.hs  Main.hs  MonadProblemsTest.hs
assignments/week8/hw/: README.md  hw.cabal
assignments/week8/hw/src/: Arith.hs  ExceptionMonad.hs  HelloWorld.hs  Lang3.hs  ParserMonad.hs  StateMonad.hs
assignments/week8/hw/tests/: ArithTest.hs  ExceptionMonadTest.hs  Lang3Test.hs  Main.hs  ParserMonadTest.hs
notes/: Curried.hs
notes/proof/: Proof.agda  ProofScratch.agda  README.md  proof.py
project/: CS320Project.txt  hw.cabal  readme.txt
project/src/: ASTInterpreter.hs  Ast.hs  CCompiler.hs  CParser.hs  ParserMonad.hs  StatefulUnsafeMonad.hs  TestsProject.hs
project/src/ic/: ICInterpreter.hs  IcInterperterExamples.hs
project/tests/: AstInterperterTests.hs  CompilerTests.hs  FeaturesTests.hs  IcInterpreterTest.hs  Main.hs  ParserTests.hs
