name:                 project
version:              0.1.0.0
synopsis:
homepage:
author:               Mark
maintainer:           lemay@bu.edu
category:
build-type:           Simple
cabal-version:        >=1.10


library
  exposed-modules:    ICInterpreter, CCompiler, CParser, ASTInterpreter, Ast, ParserMonad, StatefulUnsafeMonad
  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends:      containers, base >= 4.7 && < 5
  hs-source-dirs:     src, src/ic
  default-language:   Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests, src, src/ic
  main-is: Main.hs
  other-modules: AstInterperterTests, CompilerTests, FeaturesTests, ParserTests, IcInterpreterTest, IcInterperterExamples, ICInterpreter, CCompiler, CParser, ASTInterpreter, Ast, ParserMonad, StatefulUnsafeMonad
  build-depends:
      containers, base >= 4.7 && < 5
    , tasty >= 0.11.1, tasty-hunit, tasty-quickcheck
    , project
