name:                 hw
version:              0.1.0.0
synopsis:
homepage:
author:               Mark
maintainer:           lemay@bu.edu
category:
build-type:           Simple
cabal-version:        >=1.10


library
  exposed-modules:    WarmUp, IndexTree, IndexTreeBad, HigherOrderProblems, AnnoyingLists, IndexAndConcordance, TypeclassProblems
  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends:      base >= 4.7 && < 5
  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is: Main.hs
  other-modules: HigherOrderProblemsTest, IndexTreeBadTest, IndexTreeTest, WarmUpTest
  build-depends:
      base >= 4.7 && < 5
    , tasty >= 0.7, tasty-hunit
    , hw
