name:                 hw
version:              0.1.0.0
synopsis:
homepage:
author:               Mark
maintainer:           lemay@bu.edu
category:
build-type:           Simple
cabal-version:        >=1.10


library
  exposed-modules:    WarmUp, TypeclassProblems, HigherOrderProblems, Lang0, Lang1, Lang2, Lang3, Lang4
  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends:      containers, base >= 4.7 && < 5
  hs-source-dirs:     src
  default-language:   Haskell2010

-- --quickcheck-tests 1000
test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
-- TODO: detailed-1.0 is preferred
  hs-source-dirs:
    tests
  main-is: Main.hs
  other-modules: WarmUpTest, Lang0Test, Lang1Test, Lang2Test, Lang3Test, Lang4Test, TypeclassProblemsTest, HigherOrderProblemsTest
  build-depends:
      base >= 4.7 && < 5
    , tasty >= 0.11.1, tasty-hunit, tasty-quickcheck
    , hw
