name:                 hw
version:              0.1.0.0
synopsis:
homepage:
author:               Mark
maintainer:           lemay@bu.edu
category:
build-type:           Simple
cabal-version:        >=1.10


library
  exposed-modules:    LambdaCalcImplementation, UsingLambdaCalc, InfiniteLists
  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends:      containers, base >= 4.7 && < 5
  hs-source-dirs:     src
  default-language:   Haskell2010

-- --quickcheck-tests 1000
test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
-- TODO: detailed-1.0 is preferred
  hs-source-dirs:
    tests
  main-is: Main.hs
  other-modules: UsingLambdaCalcTest, InfiniteListsTest, LambdaCalcImplementationTest
  build-depends:
      containers, base >= 4.7 && < 5
    , tasty >= 0.11.1, tasty-hunit, tasty-quickcheck
    , hw
